--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,7 @@ authors = ["Your Name <you@example.com>"]
 requires-python = ">=3.11"
 dependencies = [
     "discord-py>=2.5.2",
+    "ffmpeg>=1.4",
     "google-generativeai>=0.8.4",
+    "yt-dlp>=2025.2.19",
 ]
